// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> renders a toggle with an error 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <ForwardRef(FormControlLabel)
    control={
      <ForwardRef(Switch)
        checked={false}
        color="primary"
        onChange={[MockFunction]}
      />
    }
    label={<b />}
    name="Not very awesome toggle"
    style={
      Object {
        "height": "30px",
        "margin": "8px 0px 0px -8px",
      }
    }
  />
  <ForwardRef(FormHelperText)
    error={true}
    style={
      Object {
        "margin": 0,
      }
    }
  >
    Ooops
  </ForwardRef(FormHelperText)>
</div>
`;

exports[`<Toggle /> renders a toggled toggle 1`] = `
<div
  style={
    Object {
      "width": "100%",
    }
  }
>
  <ForwardRef(FormControlLabel)
    control={
      <ForwardRef(Switch)
        checked={true}
        color="primary"
        onChange={[MockFunction]}
      />
    }
    label={<b />}
    name="Awesome toggle"
    style={
      Object {
        "height": "30px",
        "margin": "8px 0px 0px -8px",
      }
    }
  />
</div>
`;
